--- a/pages/admin/book-upload.html
+++ b/pages/admin/book-upload.html
@@ -244,6 +244,13 @@
             .btn-upload:disabled {
                 background-color: #bdc3c7;
                 cursor: not-allowed;
+                opacity: 0.7;
+                transform: none;
+            }
+
+            .btn-upload:disabled:hover {
+                background-color: #bdc3c7;
+                transform: none;
             }
 
             .btn-cancel {
@@ -300,6 +307,40 @@
             .required-field::after {
                 content: " *";
                 color: var(--danger-color);
+                font-weight: bold;
+            }
+
+            .image-upload-section.required {
+                border-color: var(--danger-color);
+                background-color: rgba(231, 76, 60, 0.05);
+            }
+
+            .image-upload-section.required .image-upload-text {
+                color: var(--danger-color);
+            }
+
+            .validation-error {
+                color: var(--danger-color);
+                font-size: 0.85rem;
+                margin-top: 0.5rem;
+                display: none;
+            }
+
+            .validation-error.show {
+                display: block;
+            }
+
+            @keyframes shake {
+                0%,
+                100% {
+                    transform: translateX(0);
+                }
+                25% {
+                    transform: translateX(-5px);
+                }
+                75% {
+                    transform: translateX(5px);
+                }
             }
 
             /* Responsive Design */
@@ -497,7 +538,13 @@
                                     <div class="image-upload-text">
                                         <strong>Click to upload</strong> or drag
                                         and drop<br />
-                                        Cover image for the book (Required)
+                                        <span
+                                            style="
+                                                color: #e74c3c;
+                                                font-weight: bold;
+                                            "
+                                            >⚠️ Cover image is MANDATORY</span
+                                        >
                                     </div>
                                     <input
                                         type="file"
@@ -512,6 +559,27 @@
                                     id="cover-preview"
                                     class="image-preview"
                                 ></div>
+                                <div
+                                    id="cover-status"
+                                    style="
+                                        margin-top: 0.5rem;
+                                        padding: 0.5rem;
+                                        border-radius: 4px;
+                                        display: none;
+                                    "
+                                >
+                                    <small style="font-weight: 500">
+                                        <i class="fas fa-info-circle"></i>
+                                        <span id="cover-status-text"
+                                            >Status message</span
+                                        >
+                                    </small>
+                                </div>
+                                <small style="color: #e74c3c; font-weight: 500">
+                                    <i class="fas fa-exclamation-triangle"></i>
+                                    You must upload a cover image to proceed
+                                    with book upload.
+                                </small>
                             </div>
                             <div class="form-group">
                                 <label for="additional_images"
